--- a/package/iot-temperature-monitor/be/conf/application.properties
+++ b/package/iot-temperature-monitor/be/conf/application.properties
@@ -2,9 +2,10 @@
 server.port=8080
 
 spring.application.name=temperaturemonitor
-spring.datasource.url=jdbc:postgresql://gtmtech-rdb-psql.postgres.database.azure.com:5432/postgres
-spring.datasource.username=pgadmin
-spring.datasource.password=gtmtech!23
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+
+spring.datasource.username=postgres
+spring.datasource.password=postgres!@#
 #spring.datasource.password={postgresql-password} #for azure keyvault
 spring.datasource.driver-class-name=org.postgresql.Driver
 
