--- a/iot-temperature-monitor/iot-temperature-monitor-backend/temperaturemonitor/src/main/resources/application.properties
+++ b/iot-temperature-monitor/iot-temperature-monitor-backend/temperaturemonitor/src/main/resources/application.properties
@@ -5,10 +5,16 @@ spring.application.name=temperaturemonitor
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/gtmdb
-spring.datasource.username=gtemtech
+spring.datasource.username=gtmtech
 spring.datasource.password=gtm123!@
+#psql -h localhost -p 5432 -U gtmtech -d gtmdb -W
 
 #spring.datasource.password={postgresql-password} #for azure keyvault
+
+#spring.datasource.url=jdbc:postgresql://gtmtech-rdb-psql.postgres.database.azure.com:5432/postgres
+#spring.datasource.username=pgadmin
+#spring.datasource.password=gtmtech!23
+
 
 #spring.jpa.hibernate.ddl-auto=update # 개발 시 'update', 운영 시 'none' 또는 'validate'
 spring.jpa.show-sql=true
