--- a/iot-temperature-monitor/iot-temperature-monitor-backend/temperaturemonitor/src/main/resources/application.properties
+++ b/iot-temperature-monitor/iot-temperature-monitor-backend/temperaturemonitor/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=temperaturemonitor
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/gtmdb
 spring.datasource.username=gtmtech
-spring.datasource.password=gtm123!@
+spring.datasource.password=gtm123\!\@
 #psql -h localhost -p 5432 -U gtmtech -d gtmdb -W
 
 #spring.datasource.password={postgresql-password} #for azure keyvault
@@ -28,3 +28,4 @@ spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 spring.web.cors.max-age=3600
 
+# java -jar -Dspring.config.location=file:/home/conf/application.properties your-application.jar
