--- a/iot-temperature-monitor/iot-temperature-monitor-backend/temperaturemonitor/src/main/resources/application.properties
+++ b/iot-temperature-monitor/iot-temperature-monitor-backend/temperaturemonitor/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=temperaturemonitor
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/gtmdb
 spring.datasource.username=gtmtech
-spring.datasource.password=gtm123\!\@
+spring.datasource.password=gtm123
 #psql -h localhost -p 5432 -U gtmtech -d gtmdb -W
 
 #spring.datasource.password={postgresql-password} #for azure keyvault
