--- a/iot-temperature-monitor/iot-temperature-monitor-frontend/.env
+++ b/iot-temperature-monitor/iot-temperature-monitor-frontend/.env
@@ -1,1 +1,2 @@
-VUE_APP_BACKEND_API_URL=http://localhost:8080/api
+#VUE_APP_BACKEND_API_URL=http://localhost:8080/api
+VUE_APP_BACKEND_API_URL=http://20.196.104.117:8080/api
