--- a/iot-temperature-monitor/iot-temperature-monitor-frontend/.env.production
+++ b/iot-temperature-monitor/iot-temperature-monitor-frontend/.env.production
@@ -1,2 +1,4 @@
 #VUE_APP_BACKEND_API_URL=http://localhost:8080/api
 VUE_APP_BACKEND_API_URL=http://20.196.104.117:8080/api
+#VUE_APP_BACKEND_API_URL=http://20.196.104.117:8080/api
+#iotmonweb.koreacentral.cloudapp.azure.com
