--- a/be-comm/iotmon/src/main/resources/application.properties
+++ b/be-comm/iotmon/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=iotmonitor
 # 서버 포트
-server.port=8081
+server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://gtmhansondb.postgres.database.azure.com:5432/postgres
-#spring.datasource.username=iotman
-#spring.datasource.password=Pa55w.rd
+spring.datasource.url=jdbc:postgresql://gtmhansondb.postgres.database.azure.com:5432/postgres
+spring.datasource.username=iotman
+spring.datasource.password=Pa55w.rd
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
 
 
 
