--- a/labs/web-11/package/nginx.conf
+++ b/labs/web-11/package/nginx.conf
@@ -13,13 +13,22 @@ http
 
 	sendfile on;
 	keepalive_timeout 65;
+	map_hash_bucket_size 128; # Try 128 or 256
+
+	map $http_origin $cors_origin
+	{
+		default "";
+		"https://iotmonproxy.koreacentral.cloudapp.azure.com" $http_origin;
+		"https://iotmonweb.azurewebsites.net" $http_origin;
+		"https://web11demo-edhbbvfvhcese5f5.a01.azurefd.net" $http_origin;
+	}
 
 
 	server
 	{
 		listen 80;
 		listen [::]:80;
-		server_name iotmonproxy.koreacentral.cloudapp.azure.com; # Your actual domain
+		#server_name iotmonproxy.koreacentral.cloudapp.azure.com; # Your actual domain
 
 		# Redirect HTTP to HTTPS
 		return 301 https://$host$request_uri;
@@ -44,20 +53,17 @@ http
 		ssl_session_cache shared:SSL:10m;
 		ssl_session_timeout 10m;
 
-		#location /api {
-		#    set $cors_origin "https://iotmonweb.azurewebsites.net";
-		#}
 
 		location /
 		{
-			#    set $cors_origin "https://iotmonweb.azurewebsites.net";
+			#set $cors_origin "https://iotmonweb.azurewebsites.net";
 
 			# --- CORS Configuration Starts Here ---
 			# Handle preflight (OPTIONS) requests
 
 			if ($request_method = 'OPTIONS')
 			{
-				add_header 'Access-Control-Allow-Origin' 'https://iotmonweb.azurewebsites.net';
+				add_header 'Access-Control-Allow-Origin' "$cors_origin";
 				add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
 				add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range'; # Allowed request headers
 				add_header 'Access-Control-Max-Age' 1728000; # How long the preflight response can be cached (20 days)
@@ -67,7 +73,8 @@ http
 			}
 
 			# For actual requests (GET, POST, etc.)
-			add_header 'Access-Control-Allow-Origin' 'https://iotmonweb.azurewebsites.net'; # Allow your specific origin
+			## add_header 'Access-Control-Allow-Origin' 'https://iotmonweb.azurewebsites.net'; # Allow your specific origin
+			add_header 'Access-Control-Allow-Origin' "$cors_origin";
 			add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
 			add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
 
